tests/ui/resolve/issue-12796.rs
trait Trait {
    fn outer(&self) {
        fn inner(_: &Self) {
            //~^ ERROR can't use `Self` from outer item
        }
    }
}

fn main() { }
